Index moved to the root folder

--- a/Atresmedia-Web/pages/deletedElement.html
+++ b/Atresmedia-Web/pages/deletedElement.html
@@ -25,7 +25,7 @@
             </div>
             <div class="fl_right">
                 <ul>
-                    <li><a href="../index.html"><i class="fa fa-lg fa-home"></i></a></li>
+                    <li><a href="../../index.html"><i class="fa fa-lg fa-home"></i></a></li>
                 </ul>
             </div>
 
@@ -37,11 +37,11 @@
         <header id="header" class="hoc clear">
 
             <div id="logo" class="fl_left">
-                <h1><a href="../index.html">Home</a></h1>
+                <h1><a href="../../index.html">Home</a></h1>
             </div>
             <nav id="mainav" class="fl_right">
                 <ul class="clear">
-                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../../index.html">Inicio</a></li>
                     <li class="active"><a class="drop" href="#">Páginas</a>
                         <ul>
                             <li><a id="GaleriaTab" href="#" onClick="return false;">Galería</a></li>
@@ -69,7 +69,7 @@
     <div id="breadcrumb" class="hoc clear">
 
         <ul>
-            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="../../index.html">Inicio</a></li>
             <li><a href="#">Páginas</a></li>
             <li><a id="PapeleraTab2" href="#" onClick="return false;">Papelera</a></li>
             <li><a href="deletedElement.html">Información del elemento</a></li>
