--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta charset="utf-8">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+    <link href="Atresmedia-Web/layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body id="top">
 <!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('images/backgrounds/01.png');">
+<div class="bgded overlay" style="background-image:url('Atresmedia-Web/images/backgrounds/01.png');">
 
     <div class="wrapper row0">
         <div id="topbar" class="hoc clear">
@@ -43,9 +43,9 @@
                     <li class="active"><a href="index.html">Inicio</a></li>
                     <li><a class="drop" href="#">Páginas</a>
                         <ul>
-                            <li><a href="pages/gallery.html">Galería</a></li>
-                            <li><a href="pages/trash.html">Papelera</a></li>
-                            <li><a href="pages/historial.html">Historial</a></li>
+                            <li><a href="Atresmedia-Web/pages/gallery.html">Galería</a></li>
+                            <li><a href="Atresmedia-Web/pages/trash.html">Papelera</a></li>
+                            <li><a href="Atresmedia-Web/pages/historial.html">Historial</a></li>
                         </ul>
                     </li>
                     <li><a id="buscar" href="#">Buscar</a>
@@ -130,7 +130,7 @@
 </div>
 
 
-<div class="wrapper row4 bgded overlay" style="background-image:url('images/backgrounds/03.png');">
+<div class="wrapper row4 bgded overlay" style="background-image:url('Atresmedia-Web/images/backgrounds/03.png');">
     <footer id="footer" class="hoc clear">
 
         <div class="one_third first">
@@ -156,11 +156,11 @@
 
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
-<script src="layout/scripts/intialiazeFirebase.js"></script>
-<script src="layout/scripts/changeFlex.js"></script>
-<script src="layout/scripts/jquery.min.js"></script>
-<script src="layout/scripts/jquery.backtotop.js"></script>
-<script src="layout/scripts/jquery.mobilemenu.js"></script>
-<script src="layout/scripts/jquery.flexslider-min.js"></script>
+<script src="Atresmedia-Web/layout/scripts/intialiazeFirebase.js"></script>
+<script src="Atresmedia-Web/layout/scripts/changeFlex.js"></script>
+<script src="Atresmedia-Web/layout/scripts/jquery.min.js"></script>
+<script src="Atresmedia-Web/layout/scripts/jquery.backtotop.js"></script>
+<script src="Atresmedia-Web/layout/scripts/jquery.mobilemenu.js"></script>
+<script src="Atresmedia-Web/layout/scripts/jquery.flexslider-min.js"></script>
 </body>
 </html>
